java Options to avoid warning msg